--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,41 @@
 {
     "version":2,
-    "buil":[
+    "build": [
         {
             "src":"./index.py",
             "use":"@vercel/python",
             "config":{"runtime":"python3.6"}
         }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/.*",
+            "src":"/(.*)",
             "dest":"/"
         }
-    ],
+    ]
 }
+
+// {
+//     "version": 2,
+//     "functions": {
+//       "api": {
+//         "handler": "api/app.handler",
+//         "runtime": "python3.8",
+//         "memory": 1024
+//       }
+//     },
+//     "routes": [
+//       { "handle": "filesystem" },
+//       {
+//         "src": "/",
+//         "dest": "/api"
+//       }
+//     ],
+//     "builds": [
+//       {
+//         "src": "api/**",
+//         "use": "@vercel/static-build"
+//       }
+//     ]
+//   }
+  
